Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...da81fd7](https://github.com/cri-o/cri-o/compare/v1.20.0...da81fd7d70110be3636a6913fce5de0c9a9731e6) on Fri, 09 Apr 2021 13:16:30 UTC.
+[v1.20.0...7e36349](https://github.com/cri-o/cri-o/compare/v1.20.0...7e363496e19546904ec0cfad461eaa07cf427581) on Fri, 09 Apr 2021 23:04:24 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.da81fd7d70110be3636a6913fce5de0c9a9731e6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.da81fd7d70110be3636a6913fce5de0c9a9731e6.tar.gz)
-- [cri-o.arm64.da81fd7d70110be3636a6913fce5de0c9a9731e6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.da81fd7d70110be3636a6913fce5de0c9a9731e6.tar.gz)
+- [cri-o.amd64.7e363496e19546904ec0cfad461eaa07cf427581.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.7e363496e19546904ec0cfad461eaa07cf427581.tar.gz)
+- [cri-o.arm64.7e363496e19546904ec0cfad461eaa07cf427581.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.7e363496e19546904ec0cfad461eaa07cf427581.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -100,7 +100,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
@@ -260,7 +260,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/gofrs/flock: [v0.7.1 → v0.8.0](https://github.com/gofrs/flock/compare/v0.7.1...v0.8.0)
 - github.com/gogo/protobuf: [v1.3.1 → v1.3.2](https://github.com/gogo/protobuf/compare/v1.3.1...v1.3.2)
 - github.com/golang/mock: [v1.4.4 → v1.5.0](https://github.com/golang/mock/compare/v1.4.4...v1.5.0)
-- github.com/google/cadvisor: [v0.38.5 → v0.38.8](https://github.com/google/cadvisor/compare/v0.38.5...v0.38.8)
+- github.com/google/cadvisor: [v0.38.5 → v0.39.0](https://github.com/google/cadvisor/compare/v0.38.5...v0.39.0)
 - github.com/google/go-cmp: [v0.5.2 → v0.5.5](https://github.com/google/go-cmp/compare/v0.5.2...v0.5.5)
 - github.com/google/go-containerregistry: [v0.1.3 → v0.3.0](https://github.com/google/go-containerregistry/compare/v0.1.3...v0.3.0)
 - github.com/google/pprof: [3e6fc7f → b9804c9](https://github.com/google/pprof/compare/3e6fc7f...b9804c9)
@@ -342,37 +342,37 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - k8s.io/gengo: 83324d8 → b6c5ce2
 - k8s.io/klog/v2: v2.4.0 → v2.8.0
 - k8s.io/kube-openapi: d219536 → 591a79e
-- k8s.io/kubernetes/staging/src/k8s.io/api: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/apiextensions-apiserver: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/apimachinery: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/apiserver: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/cli-runtime: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/client-go: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/cloud-provider: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/cluster-bootstrap: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/code-generator: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/component-base: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/component-helpers: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/controller-manager: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/cri-api: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/csi-translation-lib: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/kube-aggregator: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/kube-controller-manager: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/kube-proxy: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/kube-scheduler: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/kubectl: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/kubelet: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/legacy-cloud-providers: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/metrics: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/mount-utils: 3321f00 → 40a411a
-- k8s.io/kubernetes/staging/src/k8s.io/sample-apiserver: 3321f00 → 40a411a
-- k8s.io/kubernetes: v1.20.0-rc.0 → v1.21.0-beta.1
+- k8s.io/kubernetes/staging/src/k8s.io/api: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/apiextensions-apiserver: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/apimachinery: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/apiserver: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/cli-runtime: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/client-go: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/cloud-provider: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/cluster-bootstrap: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/code-generator: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/component-base: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/component-helpers: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/controller-manager: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/cri-api: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/csi-translation-lib: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/kube-aggregator: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/kube-controller-manager: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/kube-proxy: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/kube-scheduler: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/kubectl: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/kubelet: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/legacy-cloud-providers: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/metrics: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/mount-utils: 3321f00 → cb303e6
+- k8s.io/kubernetes/staging/src/k8s.io/sample-apiserver: 3321f00 → cb303e6
+- k8s.io/kubernetes: v1.20.0-rc.0 → v1.21.0
 - k8s.io/release: v0.6.0 → v0.7.0
 - k8s.io/system-validators: v1.2.0 → v1.4.0
 - k8s.io/utils: 67b214c → 2afb431
 - mvdan.cc/sh/v3: v3.2.0 → v3.2.4
 - sigs.k8s.io/apiserver-network-proxy/konnectivity-client: v0.0.14 → v0.0.15
-- sigs.k8s.io/structured-merge-diff/v4: v4.0.2 → v4.0.3
+- sigs.k8s.io/structured-merge-diff/v4: v4.0.2 → v4.1.0
 
 ### Removed
 - github.com/codegangsta/negroni: [v1.0.0](https://github.com/codegangsta/negroni/tree/v1.0.0)
