--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...7e36349](https://github.com/cri-o/cri-o/compare/v1.20.0...7e363496e19546904ec0cfad461eaa07cf427581) on Fri, 09 Apr 2021 23:04:24 UTC.
+[v1.20.0...6564a2b](https://github.com/cri-o/cri-o/compare/v1.20.0...6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2) on Mon, 12 Apr 2021 08:43:11 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.7e363496e19546904ec0cfad461eaa07cf427581.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.7e363496e19546904ec0cfad461eaa07cf427581.tar.gz)
-- [cri-o.arm64.7e363496e19546904ec0cfad461eaa07cf427581.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.7e363496e19546904ec0cfad461eaa07cf427581.tar.gz)
+- [cri-o.amd64.6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2.tar.gz)
+- [cri-o.arm64.6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -32,6 +32,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Dependency-Change
  - Default pause image is `k8s.gcr.io/pause:3.5` ([#4550](https://github.com/cri-o/cri-o/pull/4550), [@pacoxu](https://github.com/pacoxu))
+ - Updated cri-tools to v1.21.0 within static binary bundle ([#4742](https://github.com/cri-o/cri-o/pull/4742), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Feature
  - A new CLI option `--registries-conf-dir` is added which allows users to select
