--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...6564a2b](https://github.com/cri-o/cri-o/compare/v1.20.0...6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2) on Mon, 12 Apr 2021 08:44:47 UTC.
+[v1.20.0...cf214df](https://github.com/cri-o/cri-o/compare/v1.20.0...cf214df47ff582755b478405de0356a63d2aa0f9) on Mon, 12 Apr 2021 10:58:10 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2.tar.gz)
-- [cri-o.arm64.6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.6564a2b6123b946b2969d2cc5c177a9a8f5c3cc2.tar.gz)
+- [cri-o.amd64.cf214df47ff582755b478405de0356a63d2aa0f9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.cf214df47ff582755b478405de0356a63d2aa0f9.tar.gz)
+- [cri-o.arm64.cf214df47ff582755b478405de0356a63d2aa0f9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.cf214df47ff582755b478405de0356a63d2aa0f9.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -54,6 +54,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
  - CRI-O does not return `<none>` placeholders for missing tags and digests any more when doing a `ListImages` RPC ([#4673](https://github.com/cri-o/cri-o/pull/4673), [@saschagrunert](https://github.com/saschagrunert))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
+ - Fall back to search registries list if short name alias is not found in the alias table. ([#4730](https://github.com/cri-o/cri-o/pull/4730), [@umohnani8](https://github.com/umohnani8))
  - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
  - It is possible to override cgroup v2 unified configuration through the io.kubernetes.cri-o.UnifiedCgroup.$CTR_NAME annotation ([#4479](https://github.com/cri-o/cri-o/pull/4479), [@giuseppe](https://github.com/giuseppe))
  - Port-forward works for IPv6 only pods ([#4639](https://github.com/cri-o/cri-o/pull/4639), [@aojea](https://github.com/aojea))
