--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...cf214df](https://github.com/cri-o/cri-o/compare/v1.20.0...cf214df47ff582755b478405de0356a63d2aa0f9) on Mon, 12 Apr 2021 10:58:10 UTC.
+[v1.20.0...a08d776](https://github.com/cri-o/cri-o/compare/v1.20.0...a08d776f41ca5f5949524ac86b03244f70b9c1be) on Mon, 12 Apr 2021 13:31:24 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.cf214df47ff582755b478405de0356a63d2aa0f9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.cf214df47ff582755b478405de0356a63d2aa0f9.tar.gz)
-- [cri-o.arm64.cf214df47ff582755b478405de0356a63d2aa0f9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.cf214df47ff582755b478405de0356a63d2aa0f9.tar.gz)
+- [cri-o.amd64.a08d776f41ca5f5949524ac86b03244f70b9c1be.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.a08d776f41ca5f5949524ac86b03244f70b9c1be.tar.gz)
+- [cri-o.arm64.a08d776f41ca5f5949524ac86b03244f70b9c1be.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.a08d776f41ca5f5949524ac86b03244f70b9c1be.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -87,6 +87,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Log the container stop timeout at default log level ([#4549](https://github.com/cri-o/cri-o/pull/4549), [@mrunalp](https://github.com/mrunalp))
 
 #### Uncategorized
+ - "crio config" only prints the fields that are different than the default configuration. ([#4682](https://github.com/cri-o/cri-o/pull/4682), [@ityuhui](https://github.com/ityuhui))
  - Allows users to set stream timeout from config ([#4529](https://github.com/cri-o/cri-o/pull/4529), [@wgahnagl](https://github.com/wgahnagl))
  - CRI-O now supports short-name aliases which can be configured in the `containers-registries.conf(5)` configuration files.  Please refer to the following article for further details on short-name aliases: www.redhat.com/sysadmin/container-image-short-names
   
