--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...6abbf9b](https://github.com/cri-o/cri-o/compare/v1.20.0...6abbf9b1e88732e8f39da2fa1b0a66c3ef176920) on Tue, 13 Apr 2021 08:01:18 UTC.
+[v1.20.0...0d2b3e2](https://github.com/cri-o/cri-o/compare/v1.20.0...0d2b3e27624124a04ac2572437f6f3d5124bfac2) on Tue, 13 Apr 2021 09:43:11 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.6abbf9b1e88732e8f39da2fa1b0a66c3ef176920.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.6abbf9b1e88732e8f39da2fa1b0a66c3ef176920.tar.gz)
-- [cri-o.arm64.6abbf9b1e88732e8f39da2fa1b0a66c3ef176920.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.6abbf9b1e88732e8f39da2fa1b0a66c3ef176920.tar.gz)
+- [cri-o.amd64.0d2b3e27624124a04ac2572437f6f3d5124bfac2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.0d2b3e27624124a04ac2572437f6f3d5124bfac2.tar.gz)
+- [cri-o.arm64.0d2b3e27624124a04ac2572437f6f3d5124bfac2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.0d2b3e27624124a04ac2572437f6f3d5124bfac2.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -204,6 +204,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/stefanberger/go-pkcs11uri: [78d3cae](https://github.com/stefanberger/go-pkcs11uri/tree/78d3cae)
 - github.com/streadway/amqp: [edfb901](https://github.com/streadway/amqp/tree/edfb901)
 - github.com/streadway/handy: [d5acb31](https://github.com/streadway/handy/tree/d5acb31)
+- github.com/vbauerster/mpb/v6: [v6.0.3](https://github.com/vbauerster/mpb/v6/tree/v6.0.3)
 - github.com/xlab/treeprint: [a009c39](https://github.com/xlab/treeprint/tree/a009c39)
 - github.com/yvasiyarov/go-metrics: [57bccd1](https://github.com/yvasiyarov/go-metrics/tree/57bccd1)
 - github.com/yvasiyarov/gorelic: [a9bba5b](https://github.com/yvasiyarov/gorelic/tree/a9bba5b)
@@ -241,7 +242,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containernetworking/plugins: [v0.8.7 → v0.9.1](https://github.com/containernetworking/plugins/compare/v0.8.7...v0.9.1)
 - github.com/containers/buildah: [v1.15.2 → v1.20.0](https://github.com/containers/buildah/compare/v1.15.2...v1.20.0)
 - github.com/containers/common: [v0.21.0 → v0.35.4](https://github.com/containers/common/compare/v0.21.0...v0.35.4)
-- github.com/containers/image/v5: [v5.7.0 → v5.10.5](https://github.com/containers/image/v5/compare/v5.7.0...v5.10.5)
+- github.com/containers/image/v5: [v5.7.0 → v5.11.0](https://github.com/containers/image/v5/compare/v5.7.0...v5.11.0)
 - github.com/containers/ocicrypt: [v1.0.3 → v1.1.0](https://github.com/containers/ocicrypt/compare/v1.0.3...v1.1.0)
 - github.com/containers/psgo: [v1.5.1 → v1.5.2](https://github.com/containers/psgo/compare/v1.5.1...v1.5.2)
 - github.com/containers/storage: [v1.24.0 → v1.28.1](https://github.com/containers/storage/compare/v1.24.0...v1.28.1)
@@ -279,7 +280,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/insomniacslk/dhcp: [ed3125c → cc9239a](https://github.com/insomniacslk/dhcp/compare/ed3125c...cc9239a)
 - github.com/julienschmidt/httprouter: [v1.2.0 → v1.3.0](https://github.com/julienschmidt/httprouter/compare/v1.2.0...v1.3.0)
 - github.com/kisielk/errcheck: [v1.2.0 → v1.5.0](https://github.com/kisielk/errcheck/compare/v1.2.0...v1.5.0)
-- github.com/klauspost/compress: [v1.11.2 → v1.11.12](https://github.com/klauspost/compress/compare/v1.11.2...v1.11.12)
+- github.com/klauspost/compress: [v1.11.2 → v1.11.13](https://github.com/klauspost/compress/compare/v1.11.2...v1.11.13)
 - github.com/mattn/go-colorable: [v0.1.4 → v0.1.8](https://github.com/mattn/go-colorable/compare/v0.1.4...v0.1.8)
 - github.com/mattn/go-runewidth: [v0.0.9 → v0.0.10](https://github.com/mattn/go-runewidth/compare/v0.0.9...v0.0.10)
 - github.com/mattn/go-shellwords: [v1.0.10 → v1.0.11](https://github.com/mattn/go-shellwords/compare/v1.0.10...v1.0.11)
