Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...d2da3f5](https://github.com/cri-o/cri-o/compare/v1.20.0...d2da3f51b52a3901eb7f1bb891e685a756222be7) on Tue, 13 Apr 2021 15:34:49 UTC.
+[v1.20.0...2fc6693](https://github.com/cri-o/cri-o/compare/v1.20.0...2fc669342efcfce8a6e37160d434d7664253809c) on Tue, 13 Apr 2021 19:15:27 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d2da3f51b52a3901eb7f1bb891e685a756222be7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d2da3f51b52a3901eb7f1bb891e685a756222be7.tar.gz)
-- [cri-o.arm64.d2da3f51b52a3901eb7f1bb891e685a756222be7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d2da3f51b52a3901eb7f1bb891e685a756222be7.tar.gz)
+- [cri-o.amd64.2fc669342efcfce8a6e37160d434d7664253809c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.2fc669342efcfce8a6e37160d434d7664253809c.tar.gz)
+- [cri-o.arm64.2fc669342efcfce8a6e37160d434d7664253809c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.2fc669342efcfce8a6e37160d434d7664253809c.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -78,6 +78,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fixed a bug which would cause configuration files to not be reloaded properly on SIGHUP when one or more "drop-in" configuration files were being used. ([#4694](https://github.com/cri-o/cri-o/pull/4694), [@nalind](https://github.com/nalind))
  - Ingress/Egress burst limit is now set slightly below 4GB, which properly sets 4GB as the upper limit of burst ([#4348](https://github.com/cri-o/cri-o/pull/4348), [@zizon](https://github.com/zizon))
  - Instead of failing to start, CRI-O now only prints a warning and ignores the runtime, in case a **non*- default runtime is misconfigured. ([#4631](https://github.com/cri-o/cri-o/pull/4631), [@fidencio](https://github.com/fidencio))
+ - Some fields in the crio configuration related to storage and images were commented out by default (when running `crio config`). They have been uncommented, and will be applied (if they're different from the default value). ([#4748](https://github.com/cri-o/cri-o/pull/4748), [@haircommander](https://github.com/haircommander))
  - When dropping the infra container, the container inspect endpoint now returns a PID when requesting the infra container. ([#4613](https://github.com/cri-o/cri-o/pull/4613), [@haircommander](https://github.com/haircommander))
 
 #### Other (Cleanup or Flake)
