Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...bc1ef35](https://github.com/cri-o/cri-o/compare/v1.20.0...bc1ef35a932acc2f6f3b6d3eb19a4f68aa9423f6) on Tue, 13 Apr 2021 22:17:28 UTC.
+[v1.20.0...33abeef](https://github.com/cri-o/cri-o/compare/v1.20.0...33abeef036cf1783c61e191d9b450c430d03c0c5) on Wed, 14 Apr 2021 19:26:47 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.bc1ef35a932acc2f6f3b6d3eb19a4f68aa9423f6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.bc1ef35a932acc2f6f3b6d3eb19a4f68aa9423f6.tar.gz)
-- [cri-o.arm64.bc1ef35a932acc2f6f3b6d3eb19a4f68aa9423f6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.bc1ef35a932acc2f6f3b6d3eb19a4f68aa9423f6.tar.gz)
+- [cri-o.amd64.33abeef036cf1783c61e191d9b450c430d03c0c5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.33abeef036cf1783c61e191d9b450c430d03c0c5.tar.gz)
+- [cri-o.arm64.33abeef036cf1783c61e191d9b450c430d03c0c5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.33abeef036cf1783c61e191d9b450c430d03c0c5.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -152,6 +152,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/garyburd/redigo: [535138d](https://github.com/garyburd/redigo/tree/535138d)
 - github.com/go-errors/errors: [v1.0.1](https://github.com/go-errors/errors/tree/v1.0.1)
 - github.com/go-ini/ini: [v1.25.4](https://github.com/go-ini/ini/tree/v1.25.4)
+- github.com/go-task/slim-sprig: [348f09d](https://github.com/go-task/slim-sprig/tree/348f09d)
 - github.com/gobuffalo/here: [v0.6.0](https://github.com/gobuffalo/here/tree/v0.6.0)
 - github.com/gogo/googleapis: [v1.4.0](https://github.com/gogo/googleapis/tree/v1.4.0)
 - github.com/golang/snappy: [2e65f85](https://github.com/golang/snappy/tree/2e65f85)
@@ -293,7 +294,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/mrunalp/fileutils: [abd8a0e → v0.5.0](https://github.com/mrunalp/fileutils/compare/abd8a0e...v0.5.0)
 - github.com/mwitkow/go-conntrack: [cc309e4 → 2f06839](https://github.com/mwitkow/go-conntrack/compare/cc309e4...2f06839)
 - github.com/nxadm/tail: [v1.4.4 → v1.4.8](https://github.com/nxadm/tail/compare/v1.4.4...v1.4.8)
-- github.com/onsi/ginkgo: [v1.14.1 → v1.15.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.15.2)
+- github.com/onsi/ginkgo: [v1.14.1 → v1.16.1](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.16.1)
 - github.com/onsi/gomega: [v1.10.3 → v1.11.0](https://github.com/onsi/gomega/compare/v1.10.3...v1.11.0)
 - github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc93](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc93)
 - github.com/opencontainers/runtime-spec: [3e4195d → 7413a7f](https://github.com/opencontainers/runtime-spec/compare/3e4195d...7413a7f)
