--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...33abeef](https://github.com/cri-o/cri-o/compare/v1.20.0...33abeef036cf1783c61e191d9b450c430d03c0c5) on Wed, 14 Apr 2021 19:26:47 UTC.
+[v1.20.0...c7cb840](https://github.com/cri-o/cri-o/compare/v1.20.0...c7cb8407b2b6edf9a83f4f54379d0973d2921d6a) on Thu, 15 Apr 2021 10:19:43 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.33abeef036cf1783c61e191d9b450c430d03c0c5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.33abeef036cf1783c61e191d9b450c430d03c0c5.tar.gz)
-- [cri-o.arm64.33abeef036cf1783c61e191d9b450c430d03c0c5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.33abeef036cf1783c61e191d9b450c430d03c0c5.tar.gz)
+- [cri-o.amd64.c7cb8407b2b6edf9a83f4f54379d0973d2921d6a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c7cb8407b2b6edf9a83f4f54379d0973d2921d6a.tar.gz)
+- [cri-o.arm64.c7cb8407b2b6edf9a83f4f54379d0973d2921d6a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c7cb8407b2b6edf9a83f4f54379d0973d2921d6a.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -294,6 +294,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/mrunalp/fileutils: [abd8a0e → v0.5.0](https://github.com/mrunalp/fileutils/compare/abd8a0e...v0.5.0)
 - github.com/mwitkow/go-conntrack: [cc309e4 → 2f06839](https://github.com/mwitkow/go-conntrack/compare/cc309e4...2f06839)
 - github.com/nxadm/tail: [v1.4.4 → v1.4.8](https://github.com/nxadm/tail/compare/v1.4.4...v1.4.8)
+- github.com/olekukonko/tablewriter: [v0.0.4 → v0.0.5](https://github.com/olekukonko/tablewriter/compare/v0.0.4...v0.0.5)
 - github.com/onsi/ginkgo: [v1.14.1 → v1.16.1](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.16.1)
 - github.com/onsi/gomega: [v1.10.3 → v1.11.0](https://github.com/onsi/gomega/compare/v1.10.3...v1.11.0)
 - github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc93](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc93)
@@ -304,6 +305,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/prometheus/client_golang: [v1.7.1 → v1.10.0](https://github.com/prometheus/client_golang/compare/v1.7.1...v1.10.0)
 - github.com/prometheus/common: [v0.10.0 → v0.18.0](https://github.com/prometheus/common/compare/v0.10.0...v0.18.0)
 - github.com/prometheus/procfs: [v0.2.0 → v0.6.0](https://github.com/prometheus/procfs/compare/v0.2.0...v0.6.0)
+- github.com/psampaz/go-mod-outdated: [v0.7.0 → v0.8.0](https://github.com/psampaz/go-mod-outdated/compare/v0.7.0...v0.8.0)
 - github.com/rootless-containers/rootlesskit: [v0.10.0 → v0.14.0-beta.0](https://github.com/rootless-containers/rootlesskit/compare/v0.10.0...v0.14.0-beta.0)
 - github.com/russross/blackfriday/v2: [v2.0.1 → v2.1.0](https://github.com/russross/blackfriday/v2/compare/v2.0.1...v2.1.0)
 - github.com/sendgrid/sendgrid-go: [v3.7.1+incompatible → v3.7.2+incompatible](https://github.com/sendgrid/sendgrid-go/compare/v3.7.1...v3.7.2)
