--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...6cd2cea](https://github.com/cri-o/cri-o/compare/v1.20.0...6cd2cea8d6dbfdaa28bf674b2bbfe42f42e70a45) on Fri, 16 Apr 2021 00:28:32 UTC.
+[v1.20.0...6ec4abc](https://github.com/cri-o/cri-o/compare/v1.20.0...6ec4abceec44dac5dc5ed54643e2053ae8e3b11f) on Fri, 16 Apr 2021 03:39:18 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.6cd2cea8d6dbfdaa28bf674b2bbfe42f42e70a45.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.6cd2cea8d6dbfdaa28bf674b2bbfe42f42e70a45.tar.gz)
-- [cri-o.arm64.6cd2cea8d6dbfdaa28bf674b2bbfe42f42e70a45.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.6cd2cea8d6dbfdaa28bf674b2bbfe42f42e70a45.tar.gz)
+- [cri-o.amd64.6ec4abceec44dac5dc5ed54643e2053ae8e3b11f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6ec4abceec44dac5dc5ed54643e2053ae8e3b11f.tar.gz)
+- [cri-o.arm64.6ec4abceec44dac5dc5ed54643e2053ae8e3b11f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6ec4abceec44dac5dc5ed54643e2053ae8e3b11f.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -86,6 +86,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add metric to grab latency for individual CRI calls. ([#4598](https://github.com/cri-o/cri-o/pull/4598), [@umohnani8](https://github.com/umohnani8))
  - Fixed version log timestamp when starting CRI-O ([#4724](https://github.com/cri-o/cri-o/pull/4724), [@saschagrunert](https://github.com/saschagrunert))
  - Log the container stop timeout at default log level ([#4549](https://github.com/cri-o/cri-o/pull/4549), [@mrunalp](https://github.com/mrunalp))
+ - Switched build artifacts to be published via the [cri-o](https://console.cloud.google.com/storage/browser/cri-o) bucket. ([#4761](https://github.com/cri-o/cri-o/pull/4761), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
  - "crio config" only prints the fields that are different than the default configuration. ([#4682](https://github.com/cri-o/cri-o/pull/4682), [@ityuhui](https://github.com/ityuhui))
