--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...807c9da](https://github.com/cri-o/cri-o/compare/v1.20.0...807c9da4fc1b48ff0cc6bb3bf7a9d9b79661748d) on Mon, 19 Apr 2021 12:20:22 UTC.
+[v1.20.0...80be026](https://github.com/cri-o/cri-o/compare/v1.20.0...80be026d5051669999f18514828cc4b4f9a68125) on Mon, 19 Apr 2021 20:56:48 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.807c9da4fc1b48ff0cc6bb3bf7a9d9b79661748d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.807c9da4fc1b48ff0cc6bb3bf7a9d9b79661748d.tar.gz)
-- [cri-o.arm64.807c9da4fc1b48ff0cc6bb3bf7a9d9b79661748d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.807c9da4fc1b48ff0cc6bb3bf7a9d9b79661748d.tar.gz)
+- [cri-o.amd64.80be026d5051669999f18514828cc4b4f9a68125.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.80be026d5051669999f18514828cc4b4f9a68125.tar.gz)
+- [cri-o.arm64.80be026d5051669999f18514828cc4b4f9a68125.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.80be026d5051669999f18514828cc4b4f9a68125.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -84,6 +84,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Other (Cleanup or Flake)
  - Add clean_shutdown_file option to allow crio/crio wipe to verify crio had time to shutdown cleanly ([#3999](https://github.com/cri-o/cri-o/pull/3999), [@haircommander](https://github.com/haircommander))
  - Add metric to grab latency for individual CRI calls. ([#4598](https://github.com/cri-o/cri-o/pull/4598), [@umohnani8](https://github.com/umohnani8))
+ - Add systemd After=crio.service to containers and conmon ([#4766](https://github.com/cri-o/cri-o/pull/4766), [@mrunalp](https://github.com/mrunalp))
  - Fixed version log timestamp when starting CRI-O ([#4724](https://github.com/cri-o/cri-o/pull/4724), [@saschagrunert](https://github.com/saschagrunert))
  - Log the container stop timeout at default log level ([#4549](https://github.com/cri-o/cri-o/pull/4549), [@mrunalp](https://github.com/mrunalp))
  - Switched build artifacts to be published via the [cri-o](https://console.cloud.google.com/storage/browser/cri-o) bucket. ([#4761](https://github.com/cri-o/cri-o/pull/4761), [@saschagrunert](https://github.com/saschagrunert))
@@ -105,7 +106,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
