--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...dd09fc0](https://github.com/cri-o/cri-o/compare/v1.20.0...dd09fc0b6aaba50b98ce554b2f5cbeb112c80b38) on Wed, 21 Apr 2021 07:36:21 UTC.
+[v1.20.0...8ab831e](https://github.com/cri-o/cri-o/compare/v1.20.0...8ab831e686740a25509514010fba4bb2abca0f28) on Wed, 21 Apr 2021 11:58:23 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.dd09fc0b6aaba50b98ce554b2f5cbeb112c80b38.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.dd09fc0b6aaba50b98ce554b2f5cbeb112c80b38.tar.gz)
-- [cri-o.arm64.dd09fc0b6aaba50b98ce554b2f5cbeb112c80b38.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.dd09fc0b6aaba50b98ce554b2f5cbeb112c80b38.tar.gz)
+- [cri-o.amd64.8ab831e686740a25509514010fba4bb2abca0f28.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8ab831e686740a25509514010fba4bb2abca0f28.tar.gz)
+- [cri-o.arm64.8ab831e686740a25509514010fba4bb2abca0f28.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8ab831e686740a25509514010fba4bb2abca0f28.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -133,13 +133,13 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/checkpoint-restore/checkpointctl: [a2024f5](https://github.com/checkpoint-restore/checkpointctl/tree/a2024f5)
 - github.com/checkpoint-restore/go-criu/v4: [v4.1.0](https://github.com/checkpoint-restore/go-criu/v4/tree/v4.1.0)
 - github.com/clbanning/x2j: [8252494](https://github.com/clbanning/x2j/tree/8252494)
-- github.com/containerd/aufs: [20793ff](https://github.com/containerd/aufs/tree/20793ff)
-- github.com/containerd/btrfs: [918d888](https://github.com/containerd/btrfs/tree/918d888)
-- github.com/containerd/go-cni: [v1.0.1](https://github.com/containerd/go-cni/tree/v1.0.1)
-- github.com/containerd/imgcrypt: [7ed62a5](https://github.com/containerd/imgcrypt/tree/7ed62a5)
-- github.com/containerd/nri: [dbaa18c](https://github.com/containerd/nri/tree/dbaa18c)
+- github.com/containerd/aufs: [v1.0.0](https://github.com/containerd/aufs/tree/v1.0.0)
+- github.com/containerd/btrfs: [v1.0.0](https://github.com/containerd/btrfs/tree/v1.0.0)
+- github.com/containerd/go-cni: [v1.0.2](https://github.com/containerd/go-cni/tree/v1.0.2)
+- github.com/containerd/imgcrypt: [v1.1.1](https://github.com/containerd/imgcrypt/tree/v1.1.1)
+- github.com/containerd/nri: [v0.1.0](https://github.com/containerd/nri/tree/v0.1.0)
 - github.com/containerd/stargz-snapshotter/estargz: [2b97b58](https://github.com/containerd/stargz-snapshotter/estargz/tree/2b97b58)
-- github.com/containerd/zfs: [dde8f0f](https://github.com/containerd/zfs/tree/dde8f0f)
+- github.com/containerd/zfs: [v1.0.0](https://github.com/containerd/zfs/tree/v1.0.0)
 - github.com/containers/podman/v3: [v3.1.0](https://github.com/containers/podman/v3/tree/v3.1.0)
 - github.com/denverdino/aliyungo: [a747050](https://github.com/denverdino/aliyungo/tree/a747050)
 - github.com/docker/go-events: [e31b211](https://github.com/docker/go-events/tree/e31b211)
@@ -151,6 +151,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/fanliao/go-promise: [1890db3](https://github.com/fanliao/go-promise/tree/1890db3)
 - github.com/franela/goblin: [c9ffbef](https://github.com/franela/goblin/tree/c9ffbef)
 - github.com/franela/goreq: [bcd34c9](https://github.com/franela/goreq/tree/bcd34c9)
+- github.com/frankban/quicktest: [v1.11.3](https://github.com/frankban/quicktest/tree/v1.11.3)
 - github.com/garyburd/redigo: [535138d](https://github.com/garyburd/redigo/tree/535138d)
 - github.com/go-errors/errors: [v1.0.1](https://github.com/go-errors/errors/tree/v1.0.1)
 - github.com/go-ini/ini: [v1.25.4](https://github.com/go-ini/ini/tree/v1.25.4)
@@ -179,6 +180,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/mdlayher/raw: [50f2db8](https://github.com/mdlayher/raw/tree/50f2db8)
 - github.com/miekg/pkcs11: [v1.0.3](https://github.com/miekg/pkcs11/tree/v1.0.3)
 - github.com/mitchellh/osext: [5e2d6d4](https://github.com/mitchellh/osext/tree/5e2d6d4)
+- github.com/moby/locker: [v1.0.1](https://github.com/moby/locker/tree/v1.0.1)
 - github.com/moby/spdystream: [v0.2.0](https://github.com/moby/spdystream/tree/v0.2.0)
 - github.com/moby/sys/mount: [v0.2.0](https://github.com/moby/sys/mount/tree/v0.2.0)
 - github.com/moby/sys/symlink: [v0.1.0](https://github.com/moby/sys/symlink/tree/v0.1.0)
@@ -228,20 +230,21 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - dmitri.shuralyov.com/gpu/mtl: 666a987 → 28db891
 - github.com/Azure/go-autorest/autorest: [v0.11.1 → v0.11.12](https://github.com/Azure/go-autorest/autorest/compare/v0.11.1...v0.11.12)
 - github.com/GoogleCloudPlatform/testgrid: [v0.0.30 → v0.0.38](https://github.com/GoogleCloudPlatform/testgrid/compare/v0.0.30...v0.0.38)
-- github.com/Microsoft/go-winio: [v0.4.15 → 6eac466](https://github.com/Microsoft/go-winio/compare/v0.4.15...6eac466)
-- github.com/Microsoft/hcsshim: [5eafd15 → v0.8.15](https://github.com/Microsoft/hcsshim/compare/5eafd15...v0.8.15)
+- github.com/Microsoft/go-winio: [v0.4.15 → v0.4.17](https://github.com/Microsoft/go-winio/compare/v0.4.15...v0.4.17)
+- github.com/Microsoft/hcsshim: [5eafd15 → v0.8.16](https://github.com/Microsoft/hcsshim/compare/5eafd15...v0.8.16)
 - github.com/NYTimes/gziphandler: [56545f4 → v1.1.1](https://github.com/NYTimes/gziphandler/compare/56545f4...v1.1.1)
 - github.com/StackExchange/wmi: [5d04971 → cbe6696](https://github.com/StackExchange/wmi/compare/5d04971...cbe6696)
 - github.com/alecthomas/units: [c3de453 → f65c72e](https://github.com/alecthomas/units/compare/c3de453...f65c72e)
 - github.com/cenkalti/backoff: [v2.1.1+incompatible → v2.2.1+incompatible](https://github.com/cenkalti/backoff/compare/v2.1.1...v2.2.1)
-- github.com/cilium/ebpf: [4032b1d → v0.2.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.2.0)
+- github.com/cilium/ebpf: [4032b1d → v0.4.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.4.0)
 - github.com/container-storage-interface/spec: [v1.2.0 → v1.3.0](https://github.com/container-storage-interface/spec/compare/v1.2.0...v1.3.0)
-- github.com/containerd/cgroups: [0dbf7f0 → 8a68de5](https://github.com/containerd/cgroups/compare/0dbf7f0...8a68de5)
-- github.com/containerd/console: [c12b1e7 → v1.0.1](https://github.com/containerd/console/compare/c12b1e7...v1.0.1)
-- github.com/containerd/containerd: [v1.4.1 → v1.5.0-beta.4](https://github.com/containerd/containerd/compare/v1.4.1...v1.5.0-beta.4)
-- github.com/containerd/continuity: [0f16d7a → 50096c9](https://github.com/containerd/continuity/compare/0f16d7a...50096c9)
-- github.com/containerd/fifo: [a9fb20d → 115abcc](https://github.com/containerd/fifo/compare/a9fb20d...115abcc)
-- github.com/containerd/go-runc: [5a6d9f3 → 16b287b](https://github.com/containerd/go-runc/compare/5a6d9f3...16b287b)
+- github.com/containerd/cgroups: [0dbf7f0 → v1.0.0](https://github.com/containerd/cgroups/compare/0dbf7f0...v1.0.0)
+- github.com/containerd/console: [c12b1e7 → v1.0.2](https://github.com/containerd/console/compare/c12b1e7...v1.0.2)
+- github.com/containerd/containerd: [v1.4.1 → v1.5.0-rc.2](https://github.com/containerd/containerd/compare/v1.4.1...v1.5.0-rc.2)
+- github.com/containerd/continuity: [0f16d7a → v0.1.0](https://github.com/containerd/continuity/compare/0f16d7a...v0.1.0)
+- github.com/containerd/fifo: [a9fb20d → v1.0.0](https://github.com/containerd/fifo/compare/a9fb20d...v1.0.0)
+- github.com/containerd/go-runc: [5a6d9f3 → v1.0.0](https://github.com/containerd/go-runc/compare/5a6d9f3...v1.0.0)
+- github.com/containerd/typeurl: [v1.0.1 → v1.0.2](https://github.com/containerd/typeurl/compare/v1.0.1...v1.0.2)
 - github.com/containernetworking/cni: [v0.8.0 → v0.8.1](https://github.com/containernetworking/cni/compare/v0.8.0...v0.8.1)
 - github.com/containernetworking/plugins: [v0.8.7 → v0.9.1](https://github.com/containernetworking/plugins/compare/v0.8.7...v0.9.1)
 - github.com/containers/buildah: [v1.15.2 → v1.20.0](https://github.com/containers/buildah/compare/v1.15.2...v1.20.0)
@@ -304,6 +307,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/opencontainers/runtime-tools: [07406c5 → d1bf3e6](https://github.com/opencontainers/runtime-tools/compare/07406c5...d1bf3e6)
 - github.com/opencontainers/selinux: [v1.6.0 → v1.8.0](https://github.com/opencontainers/selinux/compare/v1.6.0...v1.8.0)
 - github.com/openshift/imagebuilder: [v1.1.6 → v1.2.0](https://github.com/openshift/imagebuilder/compare/v1.1.6...v1.2.0)
+- github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
 - github.com/prometheus/client_golang: [v1.7.1 → v1.10.0](https://github.com/prometheus/client_golang/compare/v1.7.1...v1.10.0)
 - github.com/prometheus/common: [v0.10.0 → v0.18.0](https://github.com/prometheus/common/compare/v0.10.0...v0.18.0)
 - github.com/prometheus/procfs: [v0.2.0 → v0.6.0](https://github.com/prometheus/procfs/compare/v0.2.0...v0.6.0)
