Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...8ab831e](https://github.com/cri-o/cri-o/compare/v1.20.0...8ab831e686740a25509514010fba4bb2abca0f28) on Wed, 21 Apr 2021 11:58:23 UTC.
+[v1.20.0...69b1b01](https://github.com/cri-o/cri-o/compare/v1.20.0...69b1b0102287ce166645513b3e924fab5cc030fe) on Wed, 21 Apr 2021 17:54:38 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8ab831e686740a25509514010fba4bb2abca0f28.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8ab831e686740a25509514010fba4bb2abca0f28.tar.gz)
-- [cri-o.arm64.8ab831e686740a25509514010fba4bb2abca0f28.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8ab831e686740a25509514010fba4bb2abca0f28.tar.gz)
+- [cri-o.amd64.69b1b0102287ce166645513b3e924fab5cc030fe.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.69b1b0102287ce166645513b3e924fab5cc030fe.tar.gz)
+- [cri-o.arm64.69b1b0102287ce166645513b3e924fab5cc030fe.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.69b1b0102287ce166645513b3e924fab5cc030fe.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -84,10 +84,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Other (Cleanup or Flake)
  - Add clean_shutdown_file option to allow crio/crio wipe to verify crio had time to shutdown cleanly ([#3999](https://github.com/cri-o/cri-o/pull/3999), [@haircommander](https://github.com/haircommander))
  - Add metric to grab latency for individual CRI calls. ([#4598](https://github.com/cri-o/cri-o/pull/4598), [@umohnani8](https://github.com/umohnani8))
- - Add systemd After=crio.service to containers and conmon ([#4766](https://github.com/cri-o/cri-o/pull/4766), [@mrunalp](https://github.com/mrunalp))
  - Fixed version log timestamp when starting CRI-O ([#4724](https://github.com/cri-o/cri-o/pull/4724), [@saschagrunert](https://github.com/saschagrunert))
  - Log the container stop timeout at default log level ([#4549](https://github.com/cri-o/cri-o/pull/4549), [@mrunalp](https://github.com/mrunalp))
- - Switched build artifacts to be published via the [cri-o](https://console.cloud.google.com/storage/browser/cri-o) bucket. ([#4761](https://github.com/cri-o/cri-o/pull/4761), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
  - "crio config" only prints the fields that are different than the default configuration. ([#4682](https://github.com/cri-o/cri-o/pull/4682), [@ityuhui](https://github.com/ityuhui))
@@ -133,13 +131,13 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/checkpoint-restore/checkpointctl: [a2024f5](https://github.com/checkpoint-restore/checkpointctl/tree/a2024f5)
 - github.com/checkpoint-restore/go-criu/v4: [v4.1.0](https://github.com/checkpoint-restore/go-criu/v4/tree/v4.1.0)
 - github.com/clbanning/x2j: [8252494](https://github.com/clbanning/x2j/tree/8252494)
-- github.com/containerd/aufs: [v1.0.0](https://github.com/containerd/aufs/tree/v1.0.0)
-- github.com/containerd/btrfs: [v1.0.0](https://github.com/containerd/btrfs/tree/v1.0.0)
-- github.com/containerd/go-cni: [v1.0.2](https://github.com/containerd/go-cni/tree/v1.0.2)
-- github.com/containerd/imgcrypt: [v1.1.1](https://github.com/containerd/imgcrypt/tree/v1.1.1)
-- github.com/containerd/nri: [v0.1.0](https://github.com/containerd/nri/tree/v0.1.0)
+- github.com/containerd/aufs: [20793ff](https://github.com/containerd/aufs/tree/20793ff)
+- github.com/containerd/btrfs: [918d888](https://github.com/containerd/btrfs/tree/918d888)
+- github.com/containerd/go-cni: [v1.0.1](https://github.com/containerd/go-cni/tree/v1.0.1)
+- github.com/containerd/imgcrypt: [7ed62a5](https://github.com/containerd/imgcrypt/tree/7ed62a5)
+- github.com/containerd/nri: [dbaa18c](https://github.com/containerd/nri/tree/dbaa18c)
 - github.com/containerd/stargz-snapshotter/estargz: [2b97b58](https://github.com/containerd/stargz-snapshotter/estargz/tree/2b97b58)
-- github.com/containerd/zfs: [v1.0.0](https://github.com/containerd/zfs/tree/v1.0.0)
+- github.com/containerd/zfs: [dde8f0f](https://github.com/containerd/zfs/tree/dde8f0f)
 - github.com/containers/podman/v3: [v3.1.0](https://github.com/containers/podman/v3/tree/v3.1.0)
 - github.com/denverdino/aliyungo: [a747050](https://github.com/denverdino/aliyungo/tree/a747050)
 - github.com/docker/go-events: [e31b211](https://github.com/docker/go-events/tree/e31b211)
@@ -151,11 +149,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/fanliao/go-promise: [1890db3](https://github.com/fanliao/go-promise/tree/1890db3)
 - github.com/franela/goblin: [c9ffbef](https://github.com/franela/goblin/tree/c9ffbef)
 - github.com/franela/goreq: [bcd34c9](https://github.com/franela/goreq/tree/bcd34c9)
-- github.com/frankban/quicktest: [v1.11.3](https://github.com/frankban/quicktest/tree/v1.11.3)
 - github.com/garyburd/redigo: [535138d](https://github.com/garyburd/redigo/tree/535138d)
 - github.com/go-errors/errors: [v1.0.1](https://github.com/go-errors/errors/tree/v1.0.1)
 - github.com/go-ini/ini: [v1.25.4](https://github.com/go-ini/ini/tree/v1.25.4)
-- github.com/go-task/slim-sprig: [348f09d](https://github.com/go-task/slim-sprig/tree/348f09d)
 - github.com/gobuffalo/here: [v0.6.0](https://github.com/gobuffalo/here/tree/v0.6.0)
 - github.com/gogo/googleapis: [v1.4.0](https://github.com/gogo/googleapis/tree/v1.4.0)
 - github.com/golang/snappy: [2e65f85](https://github.com/golang/snappy/tree/2e65f85)
@@ -180,7 +176,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/mdlayher/raw: [50f2db8](https://github.com/mdlayher/raw/tree/50f2db8)
 - github.com/miekg/pkcs11: [v1.0.3](https://github.com/miekg/pkcs11/tree/v1.0.3)
 - github.com/mitchellh/osext: [5e2d6d4](https://github.com/mitchellh/osext/tree/5e2d6d4)
-- github.com/moby/locker: [v1.0.1](https://github.com/moby/locker/tree/v1.0.1)
 - github.com/moby/spdystream: [v0.2.0](https://github.com/moby/spdystream/tree/v0.2.0)
 - github.com/moby/sys/mount: [v0.2.0](https://github.com/moby/sys/mount/tree/v0.2.0)
 - github.com/moby/sys/symlink: [v0.1.0](https://github.com/moby/sys/symlink/tree/v0.1.0)
@@ -230,27 +225,26 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - dmitri.shuralyov.com/gpu/mtl: 666a987 → 28db891
 - github.com/Azure/go-autorest/autorest: [v0.11.1 → v0.11.12](https://github.com/Azure/go-autorest/autorest/compare/v0.11.1...v0.11.12)
 - github.com/GoogleCloudPlatform/testgrid: [v0.0.30 → v0.0.38](https://github.com/GoogleCloudPlatform/testgrid/compare/v0.0.30...v0.0.38)
-- github.com/Microsoft/go-winio: [v0.4.15 → v0.4.17](https://github.com/Microsoft/go-winio/compare/v0.4.15...v0.4.17)
-- github.com/Microsoft/hcsshim: [5eafd15 → v0.8.16](https://github.com/Microsoft/hcsshim/compare/5eafd15...v0.8.16)
+- github.com/Microsoft/go-winio: [v0.4.15 → 6eac466](https://github.com/Microsoft/go-winio/compare/v0.4.15...6eac466)
+- github.com/Microsoft/hcsshim: [5eafd15 → v0.8.15](https://github.com/Microsoft/hcsshim/compare/5eafd15...v0.8.15)
 - github.com/NYTimes/gziphandler: [56545f4 → v1.1.1](https://github.com/NYTimes/gziphandler/compare/56545f4...v1.1.1)
 - github.com/StackExchange/wmi: [5d04971 → cbe6696](https://github.com/StackExchange/wmi/compare/5d04971...cbe6696)
 - github.com/alecthomas/units: [c3de453 → f65c72e](https://github.com/alecthomas/units/compare/c3de453...f65c72e)
 - github.com/cenkalti/backoff: [v2.1.1+incompatible → v2.2.1+incompatible](https://github.com/cenkalti/backoff/compare/v2.1.1...v2.2.1)
-- github.com/cilium/ebpf: [4032b1d → v0.4.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.4.0)
+- github.com/cilium/ebpf: [4032b1d → v0.2.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.2.0)
 - github.com/container-storage-interface/spec: [v1.2.0 → v1.3.0](https://github.com/container-storage-interface/spec/compare/v1.2.0...v1.3.0)
-- github.com/containerd/cgroups: [0dbf7f0 → v1.0.0](https://github.com/containerd/cgroups/compare/0dbf7f0...v1.0.0)
-- github.com/containerd/console: [c12b1e7 → v1.0.2](https://github.com/containerd/console/compare/c12b1e7...v1.0.2)
-- github.com/containerd/containerd: [v1.4.1 → v1.5.0-rc.2](https://github.com/containerd/containerd/compare/v1.4.1...v1.5.0-rc.2)
-- github.com/containerd/continuity: [0f16d7a → v0.1.0](https://github.com/containerd/continuity/compare/0f16d7a...v0.1.0)
-- github.com/containerd/fifo: [a9fb20d → v1.0.0](https://github.com/containerd/fifo/compare/a9fb20d...v1.0.0)
-- github.com/containerd/go-runc: [5a6d9f3 → v1.0.0](https://github.com/containerd/go-runc/compare/5a6d9f3...v1.0.0)
-- github.com/containerd/typeurl: [v1.0.1 → v1.0.2](https://github.com/containerd/typeurl/compare/v1.0.1...v1.0.2)
+- github.com/containerd/cgroups: [0dbf7f0 → 8a68de5](https://github.com/containerd/cgroups/compare/0dbf7f0...8a68de5)
+- github.com/containerd/console: [c12b1e7 → v1.0.1](https://github.com/containerd/console/compare/c12b1e7...v1.0.1)
+- github.com/containerd/containerd: [v1.4.1 → v1.5.0-beta.4](https://github.com/containerd/containerd/compare/v1.4.1...v1.5.0-beta.4)
+- github.com/containerd/continuity: [0f16d7a → 50096c9](https://github.com/containerd/continuity/compare/0f16d7a...50096c9)
+- github.com/containerd/fifo: [a9fb20d → 115abcc](https://github.com/containerd/fifo/compare/a9fb20d...115abcc)
+- github.com/containerd/go-runc: [5a6d9f3 → 16b287b](https://github.com/containerd/go-runc/compare/5a6d9f3...16b287b)
 - github.com/containernetworking/cni: [v0.8.0 → v0.8.1](https://github.com/containernetworking/cni/compare/v0.8.0...v0.8.1)
 - github.com/containernetworking/plugins: [v0.8.7 → v0.9.1](https://github.com/containernetworking/plugins/compare/v0.8.7...v0.9.1)
 - github.com/containers/buildah: [v1.15.2 → v1.20.0](https://github.com/containers/buildah/compare/v1.15.2...v1.20.0)
-- github.com/containers/common: [v0.21.0 → v0.36.0](https://github.com/containers/common/compare/v0.21.0...v0.36.0)
+- github.com/containers/common: [v0.21.0 → v0.35.4](https://github.com/containers/common/compare/v0.21.0...v0.35.4)
 - github.com/containers/image/v5: [v5.7.0 → v5.11.0](https://github.com/containers/image/v5/compare/v5.7.0...v5.11.0)
-- github.com/containers/ocicrypt: [v1.0.3 → v1.1.1](https://github.com/containers/ocicrypt/compare/v1.0.3...v1.1.1)
+- github.com/containers/ocicrypt: [v1.0.3 → v1.1.0](https://github.com/containers/ocicrypt/compare/v1.0.3...v1.1.0)
 - github.com/containers/psgo: [v1.5.1 → v1.5.2](https://github.com/containers/psgo/compare/v1.5.1...v1.5.2)
 - github.com/containers/storage: [v1.24.0 → v1.28.1](https://github.com/containers/storage/compare/v1.24.0...v1.28.1)
 - github.com/coredns/corefile-migration: [v1.0.10 → v1.0.11](https://github.com/coredns/corefile-migration/compare/v1.0.10...v1.0.11)
@@ -299,19 +293,16 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/mrunalp/fileutils: [abd8a0e → v0.5.0](https://github.com/mrunalp/fileutils/compare/abd8a0e...v0.5.0)
 - github.com/mwitkow/go-conntrack: [cc309e4 → 2f06839](https://github.com/mwitkow/go-conntrack/compare/cc309e4...2f06839)
 - github.com/nxadm/tail: [v1.4.4 → v1.4.8](https://github.com/nxadm/tail/compare/v1.4.4...v1.4.8)
-- github.com/olekukonko/tablewriter: [v0.0.4 → v0.0.5](https://github.com/olekukonko/tablewriter/compare/v0.0.4...v0.0.5)
-- github.com/onsi/ginkgo: [v1.14.1 → v1.16.1](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.16.1)
+- github.com/onsi/ginkgo: [v1.14.1 → v1.15.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.15.2)
 - github.com/onsi/gomega: [v1.10.3 → v1.11.0](https://github.com/onsi/gomega/compare/v1.10.3...v1.11.0)
 - github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc93](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc93)
 - github.com/opencontainers/runtime-spec: [3e4195d → 7413a7f](https://github.com/opencontainers/runtime-spec/compare/3e4195d...7413a7f)
 - github.com/opencontainers/runtime-tools: [07406c5 → d1bf3e6](https://github.com/opencontainers/runtime-tools/compare/07406c5...d1bf3e6)
 - github.com/opencontainers/selinux: [v1.6.0 → v1.8.0](https://github.com/opencontainers/selinux/compare/v1.6.0...v1.8.0)
 - github.com/openshift/imagebuilder: [v1.1.6 → v1.2.0](https://github.com/openshift/imagebuilder/compare/v1.1.6...v1.2.0)
-- github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
 - github.com/prometheus/client_golang: [v1.7.1 → v1.10.0](https://github.com/prometheus/client_golang/compare/v1.7.1...v1.10.0)
 - github.com/prometheus/common: [v0.10.0 → v0.18.0](https://github.com/prometheus/common/compare/v0.10.0...v0.18.0)
 - github.com/prometheus/procfs: [v0.2.0 → v0.6.0](https://github.com/prometheus/procfs/compare/v0.2.0...v0.6.0)
-- github.com/psampaz/go-mod-outdated: [v0.7.0 → v0.8.0](https://github.com/psampaz/go-mod-outdated/compare/v0.7.0...v0.8.0)
 - github.com/rootless-containers/rootlesskit: [v0.10.0 → v0.14.0-beta.0](https://github.com/rootless-containers/rootlesskit/compare/v0.10.0...v0.14.0-beta.0)
 - github.com/russross/blackfriday/v2: [v2.0.1 → v2.1.0](https://github.com/russross/blackfriday/v2/compare/v2.0.1...v2.1.0)
 - github.com/sendgrid/sendgrid-go: [v3.7.1+incompatible → v3.7.2+incompatible](https://github.com/sendgrid/sendgrid-go/compare/v3.7.1...v3.7.2)
@@ -333,7 +324,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - go.uber.org/atomic: v1.4.0 → v1.5.0
 - go.uber.org/multierr: v1.1.0 → v1.3.0
 - go.uber.org/zap: v1.10.0 → v1.13.0
-- golang.org/x/crypto: 7f63de1 → 0c34fe9
+- golang.org/x/crypto: 7f63de1 → 5ea612d
 - golang.org/x/exp: 6cc2880 → 85be41e
 - golang.org/x/lint: 738671d → 83fdc39
 - golang.org/x/mobile: d2bd2a2 → e6ae53a
