Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...94fde3c](https://github.com/cri-o/cri-o/compare/v1.20.0...94fde3cac02004a62d8497304168db46d07b3f82) on Thu, 22 Apr 2021 09:28:56 UTC.
+[v1.20.0...3fd821f](https://github.com/cri-o/cri-o/compare/v1.20.0...3fd821f4fd48f8f1813b7146fd7906237a13bd6b) on Thu, 22 Apr 2021 12:26:26 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.94fde3cac02004a62d8497304168db46d07b3f82.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.94fde3cac02004a62d8497304168db46d07b3f82.tar.gz)
-- [cri-o.arm64.94fde3cac02004a62d8497304168db46d07b3f82.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.94fde3cac02004a62d8497304168db46d07b3f82.tar.gz)
+- [cri-o.amd64.3fd821f4fd48f8f1813b7146fd7906237a13bd6b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3fd821f4fd48f8f1813b7146fd7906237a13bd6b.tar.gz)
+- [cri-o.arm64.3fd821f4fd48f8f1813b7146fd7906237a13bd6b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3fd821f4fd48f8f1813b7146fd7906237a13bd6b.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -106,7 +106,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
@@ -140,7 +140,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/nri: [v0.1.0](https://github.com/containerd/nri/tree/v0.1.0)
 - github.com/containerd/stargz-snapshotter/estargz: [2b97b58](https://github.com/containerd/stargz-snapshotter/estargz/tree/2b97b58)
 - github.com/containerd/zfs: [v1.0.0](https://github.com/containerd/zfs/tree/v1.0.0)
-- github.com/containers/podman/v3: [v3.1.0](https://github.com/containers/podman/v3/tree/v3.1.0)
+- github.com/containers/podman/v3: [v3.1.2](https://github.com/containers/podman/v3/tree/v3.1.2)
 - github.com/denverdino/aliyungo: [a747050](https://github.com/denverdino/aliyungo/tree/a747050)
 - github.com/docker/go-events: [e31b211](https://github.com/docker/go-events/tree/e31b211)
 - github.com/docker/go-plugins-helpers: [c9a8a2d](https://github.com/docker/go-plugins-helpers/tree/c9a8a2d)
@@ -158,8 +158,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/go-task/slim-sprig: [348f09d](https://github.com/go-task/slim-sprig/tree/348f09d)
 - github.com/gobuffalo/here: [v0.6.0](https://github.com/gobuffalo/here/tree/v0.6.0)
 - github.com/gogo/googleapis: [v1.4.0](https://github.com/gogo/googleapis/tree/v1.4.0)
-- github.com/golang/snappy: [2e65f85](https://github.com/golang/snappy/tree/2e65f85)
+- github.com/golang/snappy: [v0.0.3](https://github.com/golang/snappy/tree/v0.0.3)
 - github.com/google/go-github/v33: [v33.0.0](https://github.com/google/go-github/v33/tree/v33.0.0)
+- github.com/google/go-intervals: [v0.0.2](https://github.com/google/go-intervals/tree/v0.0.2)
 - github.com/gorilla/handlers: [60c7bfd](https://github.com/gorilla/handlers/tree/60c7bfd)
 - github.com/hashicorp/go-version: [v1.2.0](https://github.com/hashicorp/go-version/tree/v1.2.0)
 - github.com/hudl/fargo: [v1.3.0](https://github.com/hudl/fargo/tree/v1.3.0)
@@ -247,12 +248,12 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/typeurl: [v1.0.1 → v1.0.2](https://github.com/containerd/typeurl/compare/v1.0.1...v1.0.2)
 - github.com/containernetworking/cni: [v0.8.0 → v0.8.1](https://github.com/containernetworking/cni/compare/v0.8.0...v0.8.1)
 - github.com/containernetworking/plugins: [v0.8.7 → v0.9.1](https://github.com/containernetworking/plugins/compare/v0.8.7...v0.9.1)
-- github.com/containers/buildah: [v1.15.2 → v1.20.0](https://github.com/containers/buildah/compare/v1.15.2...v1.20.0)
-- github.com/containers/common: [v0.21.0 → v0.36.0](https://github.com/containers/common/compare/v0.21.0...v0.36.0)
-- github.com/containers/image/v5: [v5.7.0 → v5.11.0](https://github.com/containers/image/v5/compare/v5.7.0...v5.11.0)
+- github.com/containers/buildah: [v1.15.2 → v1.20.1](https://github.com/containers/buildah/compare/v1.15.2...v1.20.1)
+- github.com/containers/common: [v0.21.0 → v0.37.0](https://github.com/containers/common/compare/v0.21.0...v0.37.0)
+- github.com/containers/image/v5: [v5.7.0 → v5.11.1](https://github.com/containers/image/v5/compare/v5.7.0...v5.11.1)
 - github.com/containers/ocicrypt: [v1.0.3 → v1.1.1](https://github.com/containers/ocicrypt/compare/v1.0.3...v1.1.1)
 - github.com/containers/psgo: [v1.5.1 → v1.5.2](https://github.com/containers/psgo/compare/v1.5.1...v1.5.2)
-- github.com/containers/storage: [v1.24.0 → v1.28.1](https://github.com/containers/storage/compare/v1.24.0...v1.28.1)
+- github.com/containers/storage: [v1.24.0 → v1.30.0](https://github.com/containers/storage/compare/v1.24.0...v1.30.0)
 - github.com/coredns/corefile-migration: [v1.0.10 → v1.0.11](https://github.com/coredns/corefile-migration/compare/v1.0.10...v1.0.11)
 - github.com/coreos/go-iptables: [v0.4.5 → v0.5.0](https://github.com/coreos/go-iptables/compare/v0.4.5...v0.5.0)
 - github.com/coreos/go-systemd/v22: [v22.1.0 → v22.3.1](https://github.com/coreos/go-systemd/v22/compare/v22.1.0...v22.3.1)
@@ -287,7 +288,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/insomniacslk/dhcp: [ed3125c → cc9239a](https://github.com/insomniacslk/dhcp/compare/ed3125c...cc9239a)
 - github.com/julienschmidt/httprouter: [v1.2.0 → v1.3.0](https://github.com/julienschmidt/httprouter/compare/v1.2.0...v1.3.0)
 - github.com/kisielk/errcheck: [v1.2.0 → v1.5.0](https://github.com/kisielk/errcheck/compare/v1.2.0...v1.5.0)
-- github.com/klauspost/compress: [v1.11.2 → v1.11.13](https://github.com/klauspost/compress/compare/v1.11.2...v1.11.13)
+- github.com/klauspost/compress: [v1.11.2 → v1.12.1](https://github.com/klauspost/compress/compare/v1.11.2...v1.12.1)
 - github.com/mattn/go-colorable: [v0.1.4 → v0.1.8](https://github.com/mattn/go-colorable/compare/v0.1.4...v0.1.8)
 - github.com/mattn/go-runewidth: [v0.0.9 → v0.0.10](https://github.com/mattn/go-runewidth/compare/v0.0.9...v0.0.10)
 - github.com/mattn/go-shellwords: [v1.0.10 → v1.0.11](https://github.com/mattn/go-shellwords/compare/v1.0.10...v1.0.11)
