Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...53bbb63](https://github.com/cri-o/cri-o/compare/v1.20.0...53bbb63d56f02b676c503355b6a875ddf9033b07) on Fri, 23 Apr 2021 02:17:46 UTC.
+[v1.20.0...b993666](https://github.com/cri-o/cri-o/compare/v1.20.0...b99366680904420974463572f6f0b92166437b0e) on Fri, 23 Apr 2021 07:30:35 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.53bbb63d56f02b676c503355b6a875ddf9033b07.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.53bbb63d56f02b676c503355b6a875ddf9033b07.tar.gz)
-- [cri-o.arm64.53bbb63d56f02b676c503355b6a875ddf9033b07.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.53bbb63d56f02b676c503355b6a875ddf9033b07.tar.gz)
+- [cri-o.amd64.b99366680904420974463572f6f0b92166437b0e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b99366680904420974463572f6f0b92166437b0e.tar.gz)
+- [cri-o.arm64.b99366680904420974463572f6f0b92166437b0e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b99366680904420974463572f6f0b92166437b0e.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -76,6 +76,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix running privileged systemd containers with bidirectional mounts ([#4575](https://github.com/cri-o/cri-o/pull/4575), [@giuseppe](https://github.com/giuseppe))
  - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4530](https://github.com/cri-o/cri-o/pull/4530), [@haircommander](https://github.com/haircommander))
  - Fixed a bug which would cause configuration files to not be reloaded properly on SIGHUP when one or more "drop-in" configuration files were being used. ([#4694](https://github.com/cri-o/cri-o/pull/4694), [@nalind](https://github.com/nalind))
+ - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
+  seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
  - Ingress/Egress burst limit is now set slightly below 4GB, which properly sets 4GB as the upper limit of burst ([#4348](https://github.com/cri-o/cri-o/pull/4348), [@zizon](https://github.com/zizon))
  - Instead of failing to start, CRI-O now only prints a warning and ignores the runtime, in case a **non*- default runtime is misconfigured. ([#4631](https://github.com/cri-o/cri-o/pull/4631), [@fidencio](https://github.com/fidencio))
  - Some fields in the crio configuration related to storage and images were commented out by default (when running `crio config`). They have been uncommented, and will be applied (if they're different from the default value). ([#4748](https://github.com/cri-o/cri-o/pull/4748), [@haircommander](https://github.com/haircommander))
